tests/golden/fixtures/syntax-store-from-a-far-load/expected.err
Error: Cannot directly load/store :far value 'ptr' — use explicit :byte or :word view
   ╭─[ tests/golden/fixtures/syntax-store-from-a-far-load/input.k65:5:11 ]
   │
 5 │     dst = a = ptr
   │           ───┬───  
   │              ╰───── here
   │ 
   │ Help: e.g. ptr:word for low 16 bits, (ptr+2):byte for bank byte
───╯

Error: Store to var dst:byte requires @a8.
   ╭─[ tests/golden/fixtures/syntax-store-from-a-far-load/input.k65:5:5 ]
   │
 5 │     dst = a = ptr
   │     ───┬───  
   │        ╰───── here
───╯
